...
import kotlinx.coroutines.CoroutineScope
import kotlinx.coroutines.flow.collect
import kotlinx.coroutines.launch

enum class AzkarReaderSheet {
    None,
    Settings,
    Contents,
    Explanation,
    SourceInfo,
    Actions,
}

...
